--- a/index.html
+++ b/index.html
@@ -1,13 +1,105 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-  </head>
-  <body></body>
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
+</head>
+<body>
+<header class="header">
+    <nav class="header__menu" aria-label="Главное меню">
+        <ul class="menu__list">
+            <li class="menu__item"><a href="#">главная</a></li>
+            <li class="menu__item"><a href="#">посмотреть лоты</a></li>
+            <li class="menu__item"><a href="#">об аукционе</a></li>
+        </ul>
+    </nav>
+    <a class="header__logo" href="#" aria-label="Логотип">
+        <img src="./images/logo-black.svg" alt="Оно тебе надо"/>
+    </a>
+    <address class="header__address">
+        <a href="tel:+79055555555">+7 905 555-55-55</a><br/>
+        <a href="mailto:info@sobaka.ru">info@sobaka.ru</a><br/>
+        <span>наб. Принсенграхт 263- 265, Амстердам</span>
+    </address>
+</header>
+
+<main class="main">
+    <section class="cover" aria-labelledby="cover-title">
+        <h1 id="cover-title" class="cover__title">Оно тебе надо</h1>
+        <div class="description">
+            <p class="description__text">Тут будет описание и призыв к действию.</p>
+            <button class="description__button" type="button">Сделать ставку</button>
+        </div>
+    </section>
+
+    <section class="lots" aria-labelledby="lots-title">
+        <h2 id="lots-title" class="lots__title">Лоты</h2>
+        <ul class="lots__list">
+            <li class="lots__item">
+                <a class="card-link" href="#">
+                    <article class="card">Карточка 1</article>
+                </a>
+            </li>
+            <li class="lots__item">
+                <a class="card-link" href="#">
+                    <article class="card">Карточка 2</article>
+                </a>
+            </li>
+            <li class="lots__item">
+                <a class="card-link" href="#">
+                    <article class="card">Карточка 3</article>
+                </a>
+            </li>
+        </ul>
+        <a class="lots__more-link" href="#">посмотреть больше</a>
+    </section>
+
+    <section class="about" aria-labelledby="about-title">
+        <div class="about__column about__column_left">
+            <a class="about__logo-link" href="#" aria-label="Логотип">
+                <img src="./images/logo-black.svg" alt="Логотип Оно тебе надо"/>
+            </a>
+        </div>
+        <div class="about__column about__column_right">
+            <h2 id="about-title" class="about__title">Об аукционе</h2>
+            <div class="about__text">
+                <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще
+                    не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или
+                    картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные
+                    любителями?</p>
+                <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные
+                    критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                    на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить
+                    современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти
+                    лоты стали культовыми.</p>
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer class="footer">
+    <address class="footer__address">
+        <a href="tel:+79055555555">+7 905 555-55-55</a><br/>
+        <a href="mailto:info@sobaka.ru">info@sobaka.ru</a><br/>
+        <span>наб. Принсенграхт 263-265, Амстердам</span>
+    </address>
+    <nav class="footer__menu" aria-label="Меню в футере">
+        <ul class="footer__menu-list">
+            <li><a href="#">главная</a></li>
+            <li><a href="#">посмотреть лоты</a></li>
+            <li><a href="#">об аукционе</a></li>
+        </ul>
+    </nav>
+    <ul class="footer__social-list" aria-label="Социальные сети">
+        <li><a href="#" aria-label="YouTube"><img src="./images/yt.svg" alt="YouTube"/></a></li>
+        <li><a href="#" aria-label="ВКонтакте"><img src="./images/vk.svg" alt="ВКонтакте"/></a></li>
+        <li><a href="#" aria-label="Pinterest"><img src="./images/pinterest.svg" alt="Pinterest"/></a></li>
+    </ul>
+</footer>
+</body>
 </html>
