minor styling of the base document

--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
     <section class="cover" aria-labelledby="cover-title">
         <h1 id="cover-title" class="cover__title">Оно тебе надо</h1>
         <div class="description">
-            <p class="description__text">Тут будет описание и призыв к действию.</p>
-            <button class="description__button" type="button">Сделать ставку</button>
+            <p class="description__text">
+                <span>аукцион</span>
+                <span>вещей,</span>
+                <span>в</span>
+                <span>которые</span>
+                <span>никто</span>
+                <span>не</span>
+                <span>верил</span>
+            </p>
+            <button class="description__button" type="button">сделать ставку</button>
         </div>
     </section>
 
@@ -42,17 +50,26 @@
         <ul class="lots__list">
             <li class="lots__item">
                 <a class="card-link" href="#">
-                    <article class="card">Карточка 1</article>
+                    <article class="card card_type_film">
+                        <h3 class="card__title">Фильм режиссёра, который бросил кинокурс</h3>
+                        <p class="card__text">Не просто бросил, а ушёл в перерыве после первой лекции. Как он позже говорил: «между нами не было бы любви».</p>
+                    </article>
                 </a>
             </li>
             <li class="lots__item">
                 <a class="card-link" href="#">
-                    <article class="card">Карточка 2</article>
+                    <article class="card card_type_book">
+                        <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                        <p class="card__text">Обычная повседневность, из странных встреч и наблюдений складывается история длиной в один день.</p>
+                    </article>
                 </a>
             </li>
             <li class="lots__item">
                 <a class="card-link" href="#">
-                    <article class="card">Карточка 3</article>
+                    <article class="card card_type_picture">
+                        <h3 class="card__title">Картина, которую повторит даже ребёнок</h3>
+                        <p class="card__text">Ну действительно повторит: там линии и пятна, которые легко воспроизвести — но ценность работы от этого не меньше.</p>
+                    </article>
                 </a>
             </li>
         </ul>
