--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <img src="./images/logo-black.svg" alt="Оно тебе надо"/>
     </a>
     <address class="header__address">
-        <a href="tel:+79055555555">+7 905 555-55-55</a><br/>
-        <a href="mailto:info@sobaka.ru">info@sobaka.ru</a><br/>
+        <a href="tel:+99995555555">+9 999 555 5555</a><br/>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br/>
         <span>наб. Принсенграхт 263- 265, Амстердам</span>
     </address>
 </header>
@@ -51,8 +51,9 @@
             <li class="lots__item">
                 <a class="card-link" href="#">
                     <article class="card card_type_film">
-                        <h3 class="card__title">Фильм режиссёра, который бросил кинокурс</h3>
-                        <p class="card__text">Не просто бросил, а ушёл в перерыве после первой лекции. Как он позже говорил: «между нами не было бы любви».</p>
+                        <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                        <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если
+                            бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
                     </article>
                 </a>
             </li>
@@ -60,15 +61,20 @@
                 <a class="card-link" href="#">
                     <article class="card card_type_book">
                         <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-                        <p class="card__text">Обычная повседневность, из странных встреч и наблюдений складывается история длиной в один день.</p>
+                        <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                            переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об
+                            истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму
+                            Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
                     </article>
                 </a>
             </li>
             <li class="lots__item">
                 <a class="card-link" href="#">
                     <article class="card card_type_picture">
-                        <h3 class="card__title">Картина, которую повторит даже ребёнок</h3>
-                        <p class="card__text">Ну действительно повторит: там линии и пятна, которые легко воспроизвести — но ценность работы от этого не меньше.</p>
+                        <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                        <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее
+                            на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили,
+                            если бы не знали, что это — одна из революционных работ Кандинского?</p>
                     </article>
                 </a>
             </li>
@@ -101,8 +107,8 @@
 
 <footer class="footer">
     <address class="footer__address">
-        <a href="tel:+79055555555">+7 905 555-55-55</a><br/>
-        <a href="mailto:info@sobaka.ru">info@sobaka.ru</a><br/>
+        <a href="tel:+99995555555">+9 999 555 5555</a><br/>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br/>
         <span>наб. Принсенграхт 263-265, Амстердам</span>
     </address>
     <nav class="footer__menu" aria-label="Меню в футере">
