--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </header>
 
 <main class="main">
-    <section class="cover" aria-labelledby="cover-title">
+    <section class="cover section section_bg-image" aria-labelledby="cover-title">
         <h1 id="cover-title" class="cover__title">Оно тебе надо</h1>
         <div class="description">
             <p class="description__text">
@@ -45,7 +45,7 @@
         </div>
     </section>
 
-    <section class="lots" aria-labelledby="lots-title">
+    <section class="lots section section_bg-white" aria-labelledby="lots-title">
         <h2 id="lots-title" class="lots__title">Лоты</h2>
         <ul class="lots__list">
             <li class="lots__item">
@@ -82,7 +82,7 @@
         <a class="lots__more-link" href="#">посмотреть больше</a>
     </section>
 
-    <section class="about" aria-labelledby="about-title">
+    <section class="about section section_bg-white" aria-labelledby="about-title">
         <div class="about__column about__column_left">
             <a class="about__logo-link" href="#" aria-label="Логотип">
                 <img src="./images/logo-black.svg" alt="Логотип Оно тебе надо"/>
