--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="header">
     <nav class="header__menu" aria-label="Главное меню">
         <ul class="menu__list header__links-list">
-            <li class="menu__item header__links-list-item header__links-list-item_no-bullit"><a class="header__link header__link_active" href="#">главная</a></li>
+            <li class="menu__item header__links-list-item"><a class="header__link header__link_active" href="#">главная</a></li>
             <li class="menu__item header__links-list-item"><a class="header__link" href="#">посмотреть лоты</a></li>
             <li class="menu__item header__links-list-item"><a class="header__link" href="#">об аукционе</a></li>
         </ul>
