--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <header class="header">
     <nav class="header__menu" aria-label="Главное меню">
         <ul class="menu__list header__links-list">
-            <li class="menu__item header__links-list-item"><a class="header__link header__link_active" href="#">главная</a></li>
+            <li class="menu__item header__links-list-item"><a class="header__link header__link_active"
+                                                              href="#">главная</a></li>
             <li class="menu__item header__links-list-item"><a class="header__link" href="#">посмотреть лоты</a></li>
             <li class="menu__item header__links-list-item"><a class="header__link" href="#">об аукционе</a></li>
         </ul>
@@ -24,7 +25,7 @@
     <address class="header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br/>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br/>
-        <span>наб. Принсенграхт 263- 265, Амстердам</span>
+        <span>наб. Принсенграхт 263-<br/>265, Амстердам</span>
     </address>
 </header>
 
