--- a/index.html
+++ b/index.html
@@ -31,9 +31,20 @@
 
 <main class="main">
     <section class="cover section section_bg-image" aria-labelledby="cover-title">
-        <h1 id="cover-title" class="cover__title">Оно тебе надо</h1>
-        <div class="description">
-            <p class="description__text">
+        <div class="overlay"></div>
+        <h1 id="cover-title" class="cover__title">
+            <span class="aligned-text">
+                <span class="letter-spacing-extended">он</span><span class="no-letter-spacing">о</span>
+            </span>
+            <span class="aligned-text aligned-text_center">
+                <span class="letter-spacing-extended">теб</span><span class="no-letter-spacing">е</span>
+            </span>
+            <span class="aligned-text aligned-text_right">
+                <span class="letter-spacing-extended">над</span><span class="no-letter-spacing">о</span>
+            </span>
+        </h1>
+        <div class="cover__description">
+            <p class="cover__description-text">
                 <span>аукцион</span>
                 <span>вещей,</span>
                 <span>в</span>
@@ -42,7 +53,7 @@
                 <span>не</span>
                 <span>верил</span>
             </p>
-            <button class="description__button" type="button">сделать ставку</button>
+            <button class="bet-button" type="button">сделать ставку</button>
         </div>
     </section>
 
