--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li class="lots__item">
                 <a class="card-link" href="#">
                     <article class="card card_type_film">
-                        <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                        <h3 class="card__title">Фильм режиссёра,<br/>который бросил<br/>киношколу</h3>
                         <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если
                             бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
                     </article>
@@ -72,7 +72,7 @@
             <li class="lots__item">
                 <a class="card-link" href="#">
                     <article class="card card_type_book">
-                        <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                        <h3 class="card__title">Книга, где описан<br/>один скучный день<br/>из жизни<br/>рекламного агента</h3>
                         <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
                             переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об
                             истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму
@@ -83,7 +83,7 @@
             <li class="lots__item">
                 <a class="card-link" href="#">
                     <article class="card card_type_picture">
-                        <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                        <h3 class="card__title">Картина, которую<br/>повторит даже<br/>5-летний сын<br/>маминой подруги</h3>
                         <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее
                             на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили,
                             если бы не знали, что это — одна из революционных работ Кандинского?</p>
