section "about the auction"

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 
     <section class="about section section_bg-white" aria-labelledby="about-title">
         <div class="about__column about__column_left">
-            <a class="about__logo-link" aria-label="Логотип">
-                <img src="./images/logo-black.svg" alt="Логотип Оно тебе надо"/>
-            </a>
+            <div class="about__logo-link" aria-label="Логотип">
+                <img class="about__logo-image" src="./images/logo-black.svg" alt="Логотип Оно тебе надо"/>
+            </div>
         </div>
         <div class="about__column about__column_right">
             <h2 id="about-title" class="about__title">Об аукционе</h2>
