--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
     </address>
     <nav class="footer__menu" aria-label="Меню в футере">
         <ul class="footer__menu-list">
-            <li><a href="#">главная</a></li>
-            <li><a href="#">посмотреть лоты</a></li>
-            <li><a href="#">об аукционе</a></li>
+            <li class="footer__menu-list-item"><a class="footer__menu-link footer__menu-link_active" href="#">главная</a></li>
+            <li class="footer__menu-list-item"><a class="footer__menu-link" href="#">посмотреть лоты</a></li>
+            <li class="footer__menu-list-item"><a class="footer__menu-link" href="#">об аукционе</a></li>
         </ul>
     </nav>
     <ul class="footer__social-list" aria-label="Социальные сети">
-        <li><a href="#" aria-label="YouTube"><img src="./images/yt.svg" alt="YouTube"/></a></li>
-        <li><a href="#" aria-label="ВКонтакте"><img src="./images/vk.svg" alt="ВКонтакте"/></a></li>
-        <li><a href="#" aria-label="Pinterest"><img src="./images/pinterest.svg" alt="Pinterest"/></a></li>
+        <li class="footer__social-list-item"><a class="footer__social-link" href="#" aria-label="YouTube"><img class="footer__social-icon" src="./images/yt.svg" alt="YouTube"/></a></li>
+        <li class="footer__social-list-item"><a class="footer__social-link" href="#" aria-label="ВКонтакте"><img class="footer__social-icon" src="./images/vk.svg" alt="ВКонтакте"/></a></li>
+        <li class="footer__social-list-item"><a class="footer__social-link" href="#" aria-label="Pinterest"><img class="footer__social-icon" src="./images/pinterest.svg" alt="Pinterest"/></a></li>
     </ul>
 </footer>
 </body>
