edits in the header

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <address class="header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br/>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br/>
-        <span>наб. Принсенграхт 263-<br/>265, Амстердам</span>
+        <span>наб. Принсенграхт 263-265, Амстердам</span>
     </address>
 </header>
 
@@ -34,13 +34,13 @@
         <div class="overlay"></div>
         <h1 id="cover-title" class="cover__title">
             <span class="aligned-text">
-                <span class="letter-spacing-extended">он</span><span class="no-letter-spacing">о</span>
+                <span class="letter-spacing-extended">оно</span>
             </span>
             <span class="aligned-text aligned-text_center">
-                <span class="letter-spacing-extended">теб</span><span class="no-letter-spacing">е</span>
+                <span class="letter-spacing-extended">тебе</span>
             </span>
             <span class="aligned-text aligned-text_right">
-                <span class="letter-spacing-extended">над</span><span class="no-letter-spacing">о</span>
+                <span class="letter-spacing-extended">надо</span>
             </span>
         </h1>
         <div class="cover__description">
