--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <address class="header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br/>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br/>
-        <span>наб. Принсенграхт 263-265, Амстердам</span>
+        <span>наб. Принсенграхт 263- 265, Амстердам</span>
     </address>
 </header>
 
