edits to the cover

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <main class="main">
     <section class="cover section section_bg-image" aria-labelledby="cover-title">
         <div class="overlay"></div>
-        <h1 id="cover-title" class="cover__title">
+        <h1 class="cover__title">
             <span class="aligned-text">
                 <span class="letter-spacing-extended">оно</span>
             </span>
@@ -45,13 +45,13 @@
         </h1>
         <div class="cover__description">
             <p class="cover__description-text">
-                <span>аукцион</span>
-                <span>вещей,</span>
-                <span>в</span>
-                <span>которые</span>
-                <span>никто</span>
-                <span>не</span>
-                <span>верил</span>
+                <span class="cover__word">аукцион</span>
+                <span class="cover__word ws-90">вещей,</span>
+                <span class="cover__word ws-80">в</span>
+                <span class="cover__word ws-110">которые</span>
+                <span class="cover__word ws-80">никто</span>
+                <span class="cover__word ws-90">не</span>
+                <span class="cover__word ws-80">верил</span>
             </p>
             <button class="bet-button" type="button">сделать ставку</button>
         </div>
