edits throughout the document

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </h1>
         <div class="cover__description">
             <p class="cover__description-text">
-                <span class="cover__word">аукцион</span>
-                <span class="cover__word ws-90">вещей,</span>
-                <span class="cover__word ws-80">в</span>
-                <span class="cover__word ws-110">которые</span>
-                <span class="cover__word ws-80">никто</span>
-                <span class="cover__word ws-90">не</span>
-                <span class="cover__word ws-80">верил</span>
+                <span>аукцион</span>
+                <span class="ws-90">вещей,</span>
+                <span class="ws-80">в</span>
+                <span class="ws-110">которые</span>
+                <span class="ws-80">никто</span>
+                <span class="ws-90">не</span>
+                <span class="ws-80">верил</span>
             </p>
             <button class="bet-button" type="button">сделать ставку</button>
         </div>
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="about__column about__column_right">
-            <h2 id="about-title" class="about__title">Об аукционе</h2>
+            <h2 class="about__title">Об аукционе</h2>
             <div class="about__text">
                 <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще
                     не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или
