edits throughout the document

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
     <a class="header__logo" aria-label="Логотип">
-        <img class="header__logo-image" src="./images/logo-black.svg" alt="Оно тебе надо"/>
+        <img src="./images/logo-black.svg" alt="Оно тебе надо"/>
     </a>
     <address class="header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br/>
@@ -29,8 +29,8 @@
     </address>
 </header>
 
-<main class="main">
-    <section class="cover section section_bg-image" aria-labelledby="cover-title">
+<main>
+    <section class="cover section_bg-image" aria-labelledby="cover-title">
         <div class="overlay"></div>
         <h1 class="cover__title">
             <span class="aligned-text">
@@ -57,7 +57,7 @@
         </div>
     </section>
 
-    <section class="lots section section_bg-white" aria-labelledby="lots-title">
+    <section class="lots section_bg-white" aria-labelledby="lots-title">
         <h2 id="lots-title" class="lots__title">Лоты</h2>
         <ul class="lots__list">
             <li class="lots__item">
@@ -94,7 +94,7 @@
         <a class="lots__more-link" href="#">посмотреть больше</a>
     </section>
 
-    <section class="about section section_bg-white" aria-labelledby="about-title">
+    <section class="about section_bg-white" aria-labelledby="about-title">
         <div class="about__column about__column_left">
             <div class="about__logo-link" aria-label="Логотип">
                 <img class="about__logo-image" src="./images/logo-black.svg" alt="Логотип Оно тебе надо"/>
