--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <main>
     <section id="cover" class="cover section_bg-image" aria-labelledby="cover-title">
         <div class="overlay"></div>
-        <h1 class="cover__title">
+        <h1 id="cover-title" class="cover__title">
             <span class="aligned-text">
                 <span class="letter-spacing-extended">оно</span>
             </span>
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="about__column about__column_right">
-            <h2 class="about__title">Об аукционе</h2>
+            <h2 id="about-title" class="about__title">Об аукционе</h2>
             <div class="about__text">
                 <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще
                     не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или
